Fix bug with ColorChanger where it could default to the wrong color.

--- a/css/uno.css
+++ b/css/uno.css
@@ -18,7 +18,7 @@ canvas{
     left:0;
     top:0;
     width: 100%;
-    /* max-width: 100%; */
+    max-width: 100%;
     max-height: 100%;
 }
 
